@@ -1,5 +1,9 @@
 2008-12-31  Michal Ludvig  <michal@logix.cz>
 
+	* s3cmd, S3/Utils.py, S3/Exceptions.py, S3/Progress.py,
+	  S3/Config.py, S3/S3.py: Added --encoding switch and 
+	  Config.encoding variable. Don't assume utf-8 for filesystem
+	  and terminal output anymore.
 	* s3cmd: Avoid ZeroDivisionError on fast links.
 	* s3cmd: Unicodised all info() output.
 
